ChatControllerStub
Clase stub para desarrollo de la interfaz